clean code and add saver for username